--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ font_name=
 
 # Fullscreen mode
 # Default : fullscreen=True
-fullscreen=True
+fullscreen=False
 
 # Scenario choice
 # Example  : scenario_path=Parasuraman_et_al_1993/high_reliability_block.txt
