--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ language=fr_FR
 
 # If multiple screens layout, you can modify the index
 # Default : screen_index=0
-screen_index=0
+screen_index=1
 
 # If you don't like the default font, feel free to specify a different one below.
 # (Leave it empty to get your system default font)
@@ -21,7 +21,8 @@ fullscreen=False
 
 # Scenario choice
 # Example  : scenario_path=Parasuraman_et_al_1993/high_reliability_block.txt
-scenario_path=generated/participant-1_08062023_153202.txt
+#scenario_path=generated/participant-1_08062023_153202.txt
+scenario_path=test.txt
 
 # Display the session number at start
 display_session_number=True
